# conjugateur-fr

./: .gitignore  Makefile  README.md  build_github_pages.py  french_conjugator_v8.py  pyproject.toml
.github/workflows/: pages.yml
docs/: app.js  index.html  styles.css
